--- a/src/scss/inner/_content.scss
+++ b/src/scss/inner/_content.scss
@@ -917,6 +917,10 @@ body {
     }
   }
 
+  &__input-wrapper {
+    position: relative;
+  }
+
   &__input-group {
     position: relative;
     margin-bottom: 19px;
@@ -935,6 +939,7 @@ body {
   &__input-icon {
     position: absolute;
     top: 50%;
+    transform: translateY(-50%);
     right: 16px;
     pointer-events: none;
     display: flex;
